--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="stylesheet" href="./assets/styles/css/main.css">
     <title>iPhone 12 Pro and iPhone 12 Pro Max - Apple</title>
 </head>
 <body>
