Added transition effects

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <div class="desc-bar font-500-12">
         <div class="desc">
-            Save on the newest iPhone with the latest carrier deals. Directly from Apple.</span>
+            <span>Save on the newest iPhone with the latest carrier deals. Directly from Apple.</span>
             <a href="" class="desc-link">Find your offer</a>
             <span class="desc"><span class="fa fa-angle-right"></span>
         </div>
@@ -90,5 +90,6 @@
     <div style="height: 800px;"></div>
     <script src="./assets/js/toggleBars.js"></script>
     <script src="./assets/js/stickyNav.js"></script>
+    <script src="./assets/js/descBar.js"></script>
 </body>
 </html>
