--- a/index.html
+++ b/index.html
@@ -82,8 +82,179 @@
     <div class="desc-bar font-500-12">
         <div class="desc">
             <span>Save on the newest iPhone with the latest carrier deals. Directly from Apple.</span>
+            <wbr>
             <a href="" class="desc-link">Find your offer</a>
             <span class="desc"><span class="fa fa-angle-right"></span>
+        </div>
+    </div>
+
+    <div class="banner-section-wrapper">
+        <div class="banner-text">
+            <div class="banner-text-overlay"></div>
+            <div class="font-500-21 banner-small-text ">
+                iPhone 12 Pro and iPhone 12 Pro Max
+            </div>
+            <div class="font-500-48 banner-large-text ">
+                It’s a leap year.
+            </div>
+        </div>
+        <div class="video-container">
+            <video class="video-element" autoplay preload="" muted="" aria-hidden="true" playsinline="" src="./assets/img/large.mp4"></video>
+        </div>
+        <div class="font-500-21 banner-below-text ">
+            <div class="banner-below-text-desc">
+                A14 Bionic rockets past every other smartphone chip. The Pro camera system takes low-light photography to the next level — with an even bigger jump on iPhone 12 Pro Max. And Ceramic Shield delivers four times better drop performance. Let’s see what this thing can do.
+            </div>
+            <div class="banner-below-text-offer">
+                From ₹119900* before trade‑in.
+            </div>
+            <div class="watch-text-film">
+                <a href="">Watch the film <img src="./assets/img/video-play.PNG" alt=""></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="bezel-section-wrapper">
+        <div class="font-500-48 bezel-section-text">
+            Less bezel, more screen.
+        </div>
+        <div class="bezel-section-img">
+            <img src="./assets/img/design_less_bezel.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="super-retina-section">
+        <div class="super-retina-container">
+            <div class="font-700-16 super-retina-specs super-retina-specs-one">
+                <div class="retina-text">
+                    iPhone 12 Pro Max
+                </div>
+                <div>
+                    17 cm (6.7”) Super Retina
+                </div>
+                <div>
+                    XDR display1
+                </div>
+            </div>
+            <div class="super-retina-img">
+                <video autoplay preload="" muted="" aria-hidden="true" playsinline=""  src="./assets/img/medium.mp4"></video>
+            </div>
+            <div class="font-700-16 super-retina-specs super-retina-specs-two">
+                <div class="retina-text">
+                    iPhone 12 Pro
+                </div>
+                <div>
+                    15.5 cm (6.1”) Super Retina
+                </div>
+                <div>
+                    XDR display1
+                </div>
+            </div>
+        </div>
+        <div class="super-retina-specs-below-container">
+            <div class="font-700-16 super-retina-specs-below">
+                <div class="retina-text">
+                    iPhone 12 Pro Max
+                </div>
+                <div>
+                    17 cm (6.7”) 
+                </div>
+                <div>
+                    Super Retina
+                </div>
+                <div>
+                    XDR display1
+                </div>
+            </div>
+            <div class="font-700-16 super-retina-specs-below">
+                <div class="retina-text">
+                    iPhone 12 Pro
+                </div>
+                <div>
+                    15.5 cm (6.1”)
+                </div>
+                <div>
+                    Super Retina
+                </div>
+                <div>
+                    XDR display1
+                </div>
+            </div>
+        </div>
+        <div class="retina-btn-container">
+            <button class="retina-btn">Compare sizes to iPhone 11 Pro</button>
+        </div>
+    </div>
+
+    <div class="ceramic-glass-container">
+        <div class="font-500-48 ceramic-glass-heading ceramic-glass-toggle-lg">
+            Kicks glass.
+        </div>
+        <div class="ceramic-glass-img">
+            <img class="ceramic-glass-toggle-lg" src="./assets/img/display_super_retina_static__dwbpn8q7nei6_medium.jpg" alt="">
+            <img class="ceramic-glass-toggle-sm" src="./assets/img/design_tougher_glass__czlsbgxawrki_small.jpg" alt="">
+        </div>
+        <div class="ceramic-glass-toggle-lg">
+            <div class="font-500-48 gradient-text ceramic-glass-text ">
+                <div>
+                    Ceramic Shield, tougher than
+                </div> 
+                <div>
+                    any smartphone glass
+                </div>
+            </div>
+            <div class="ceramic-glass-btn">
+                <button>Find out how</button>
+            </div>
+        </div>
+        <div class="ceramic-glass-toggle-sm ceramic-glass-toggle-sm-text-container">
+            <div class="font-500-48 ceramic-glass-heading-sm">
+                Kicks glass.
+            </div>
+            <div class="font-500-48 gradient-text ceramic-glass-text-sm">
+                <div>
+                    Ceramic Shield,
+                </div> 
+                <div>
+                    tougher than any
+                </div>
+                <div>
+                    smartphone glass
+                </div>
+            </div>
+            <div class="ceramic-glass-btn-sm">
+                <button>Find out how</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="surgical-grade-wrapper">
+        <div class="surgical-grade-container">
+            <div class="surgical-grade-img">
+                <img src="./assets/img/design_surgical_grade_static__fojmc5p8vxua_small.jpg" alt="">
+            </div>
+        </div>
+        <div class="font-500-48 surgical-grade-heading surgical-grade-heading-left">
+            Surgical-grade
+        </div>
+        <div class="font-500-48 surgical-grade-heading surgical-grade-heading-right">
+            stainless steel.
+        </div>
+    </div>
+
+    <div class="water-resistance-wrappaer">
+        <div class="water-resistance-container">
+            <div class="water-resistance-img">
+                <img src="./assets/img/design_water_resistance__bx3cq2uzbzw2_large_2x.jpg" alt="">
+            </div>
+            <div>
+                <div>            
+                    Blows other phones out of the water.
+                </div>
+                <div>
+                    Industry‑leading IP68 water resistance3
+                </div>
+            </div>
         </div>
     </div>
 
