Added water resistance, finnish touches and night cam section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                 </div>
             </div>
         </div>
+        <div class="fixed-bar-alternative">
+
+        </div>
     </div>
 
     <div class="desc-bar font-500-12">
@@ -247,20 +250,70 @@
             <div class="water-resistance-img">
                 <img src="./assets/img/design_water_resistance__bx3cq2uzbzw2_large_2x.jpg" alt="">
             </div>
-            <div>
-                <div>            
+            <div class="water-resistance-text-container">
+                <div class="font-700-48 water-resistance-heading">            
                     Blows other phones out of the water.
                 </div>
-                <div>
+                <div class="font-700-21 water-resistance-text">
                     Industry‑leading IP68 water resistance3
                 </div>
             </div>
         </div>
     </div>
+    
+    <div class="finnish-touches-wrapper">
+        <div class="finnish-touches-container">
+            <div class="finnish-touches-video">
+                <video autoplay preload="" muted="" aria-hidden="true" playsinline="" src="./assets/img/shines.mp4"></video>
+            </div>
+            <div>
+                <div class="font-700-48 finnish-touches-heading">
+                    Four finishing touches.
+                </div>
+                <div class="font-700-21 finnish-touches-text">
+                    Pacific Blue, Gold, Silver and Graphite
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <div style="height: 800px;"></div>
+
+    <div class="night-recording-wrapper">
+        <div class="night-recording-container">
+            <div class="font-700-48 night-recording-text-container">
+                <div class="night-recording-heading">
+                    Now every night
+                </div>
+                <div class="night-recording-heading">
+                    is movie night.
+                </div>
+            </div>
+            <div class="night-recording-video">
+                <video id="night_scene" autoplay  muted="" preload="" loop=""  playsinline="" src="./assets/img/night_scene.mp4"></video>
+                <div id="video_overlay" class="video-overlay"></div>
+            </div>
+            <div class="font-500-21 night-recording-desc-text-container">
+                <div class="night-recording-desc-text">
+                    The Wide camera’s larger sensor brings way more detail out of the shadows. And for the first time, you can take Night mode Time‑lapse videos with a tripod to capture scenes with dramatic motion. Now even your movies can pull an all-nighter.
+                </div>
+            </div>
+            <div class="night-cam-spec-container">
+                <div class="font-400-48 gradient-text night-cam-spec">
+                    <div>
+                        87% better low-light video with iPhone 12 Pro Max
+                    </div>
+                    <hr>
+                    <div>
+                        New ISP with improved noise reduction for more detail
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./assets/js/toggleBars.js"></script>
     <script src="./assets/js/stickyNav.js"></script>
     <script src="./assets/js/descBar.js"></script>
+    <script src="./assets/js/videoHeight.js"></script>
 </body>
 </html>
